[project]
name = "gamblers-ruin-blog-marimo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.41.0",
    "humanize>=4.13.0",
    "marimo[recommended]>=0.16.4",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "python-lsp-server>=1.13.1",
    "scipy>=1.16.2",
    "watchdog>=6.0.0",
]

[tool.marimo.runtime]
output_max_bytes = 60000000
